beta-ns/debug.yaml
---
apiVersion: v1
kind: Pod
metadata:
  name: test
spec:
  containers:
  - name: netshoot
    image: nicolaka/netshoot
    command: ["sleep", "infinity"]
    imagePullPolicy: IfNotPresent
  restartPolicy: Never
