beta-ns/gateway.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: gateway
spec:
  gatewayClassName: cilium
  listeners:
  - name: default
    hostname: "*.beta.mylittleforge.org"
    port: 443
    protocol: HTTPS
    tls:
      certificateRefs:
      - kind: Secret
        group: ""
        name: selfsigned-cert-tls
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: http
spec:
  parentRefs:
  - name: gateway
  hostnames: ["gitlab.beta.mylittleforge.org"]
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: httpbin-service
      port: 80
